<resources>
    <string name="app_name">Atma Jaya Rental</string>
    <string name="login">LOGIN</string>
    <string name="clear_field">CLEAR FIELD</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="home">Home</string>
    <string name="rp0">Rp0</string>
    <string name="nama_mobil">Nama Mobil</string>
    <string name="loading_text">Loading...</string>
    <string name="tipe_mobil">Tipe Mobil</string>
    <string name="jenis_transmisi_mobil">Jenis Transmisi Mobil</string>
    <string name="jenis_bahan_bakar_mobil">Jenis Bahan Bakar Mobil</string>
    <string name="warna_mobil">Warna Mobil</string>
    <string name="volume_bagasi_mobil">Volume Bagasi Mobil</string>
    <string name="fasilitas_mobil">Fasilitas Mobil</string>
    <string name="harga_sewa_mobil">Harga Sewa Mobil</string>
    <string name="back">BACK</string>
    <string name="detail_mobil">Detail Mobil</string>
    <string name="keterangan_promo">Keterangan Promo</string>
    <string name="jenis_promo">Jenis Promo</string>
    <string name="kode_promo">Kode Promo</string>
    <string name="profile_pengguna">Profile User</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="id">ID:</string>
    <string name="nama">Nama:</string>
    <string name="alamat">Alamat:</string>
    <string name="telepon">Telepon:</string>
    <string name="email2">Email:</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="car">Car</string>
    <string name="promo">Promo</string>
    <string name="selamat_datang_di_atma_jaya_rental">Selamat Datang di Atma Jaya Rental</string>
    <string name="edit_status_ketersediaan">Edit Status Ketersediaan</string>
    <string name="rating">Rating:</string>
    <string name="status">Status:</string>
    <string name="status_transaksi">Status Transaksi</string>
    <string name="nama_pegawai">Nama Pegawai</string>
    <string name="nama_promo">Nama Promo</string>
    <string name="nama_cus">Nama CUST</string>
    <string name="tgl_transaksi">TGL Transaksi</string>
    <string name="id_transaksi">ID Transaksi</string>
    <string name="nama_driver">Nama Driver</string>
    <string name="riwayat">Riwayat</string>
    <string name="tidak_tersedia">Tidak Tersedia</string>
    <string name="tersedia">Tersedia</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="nama2">Nama</string>
    <string name="alamat2">Alamat</string>
    <string name="status_ketersediaan">STATUS KETERSEDIAAN</string>
    <string name="simpan">Simpan</string>
    <string name="report">Report</string>
    <string name="cetak_laporan">Cetak Laporan</string>
    <string name="semoga_harimu_menyenangkan">Semoga Harimu Menyenangkan :)</string>
    <string name="month_year">Month/Year</string>
</resources>