<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/b_mobil"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_directions_car_24"
        android:title="@string/car"/>
    <item
        android:id="@+id/promo"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_monetization_on_24"
        android:title="@string/promo"/>
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"/>
    <item
        android:id="@+id/logout"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/logout"/>
</menu>