<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/r_transaksi"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/history"/>
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"/>
    <item
        android:id="@+id/logout"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/logout"/>
</menu>