<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="700px"
            android:layout_height="500px"
            android:src="@drawable/logo"
            android:layout_marginStart="50dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/yellow_gradient"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:hint="@string/password" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_login"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        >

        <Button
            android:id="@+id/btn_Clear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="16dp"
            android:text="@string/clear_field"
            android:textColor="@color/yellow_gradient"
            android:backgroundTint="@color/white"
            style="@style/Widget.AppCompat.Button.Borderless"
            />

        <Button
            android:id="@+id/btn_Login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="16dp"
            android:text="LOGIN"
            android:textColor="@color/white"
            android:backgroundTint="@color/yellow_gradient"
            />

    </LinearLayout>

</RelativeLayout>